tests/error/sndPairOfPairAndList-no-force.uplc
(program 0.0.0
  [(builtin sndPair)
   (con pair (bool) (bytestring)
        (True, #012345))]
)
